--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,7 @@
         "test": "jest"
     },
     "dependencies": {
-        "axios": "^0.27.2",
+        "axios": "^1.8.4",
         "bcryptjs": "^2.4.3",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
@@ -19,16 +19,17 @@
         "express-rate-limit": "^7.5.0",
         "express-session": "^1.17.3",
         "helmet": "^8.1.0",
-        "jsonwebtoken": "^8.5.1",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^6.13.8",
         "morgan": "^1.10.0",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "punycode": "^2.3.1"
     },
     "devDependencies": {
         "jest": "^28.1.1",
-        "nodemon": "^2.0.22"
+        "nodemon": "^3.1.9"
     },
     "keywords": [
         "car",
