--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,11 +6,12 @@
     "type": "module",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js",
+        "start:clean": "npx kill-port 3000 && node server.js",
         "test": "jest"
     },
     "dependencies": {
         "axios": "^1.8.4",
+        "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
@@ -21,6 +22,7 @@
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^6.13.8",
+        "mongosh": "^2.5.0",
         "morgan": "^1.10.0",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
@@ -29,6 +31,7 @@
     },
     "devDependencies": {
         "jest": "^28.1.1",
+        "kill-port": "^2.0.1",
         "nodemon": "^3.1.9"
     },
     "keywords": [
