--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -134,3 +134,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# cypress
+**/**/Frontend/cypress/fixtures
+**/**/Frontend/cypress/support
+**/**/Frontend/cypress/downloads
+**/**/Frontend/cypress.config.js
