--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
+        "cypress": "^14.3.2",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
